feat/add theme 1.0

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       {
         "label": "Cyan Light Theme",
         "uiTheme": "vs",
-        "path": "./themes/theme.json"
+        "path": "./themes/cyan-color-theme.json"
       }
     ]
   }
