--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "cyan-light-theme",
   "displayName": "Cyan Light Theme",
   "description": "Fork colour theme from JetBrains Cyan Light Theme (original author https://github.com/OlyaB/CyanTheme)",
-  "version": "1.0.0",
+  "icon": "./resources/logo.png",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.96.0"
   },
@@ -17,5 +18,10 @@
         "path": "./themes/cyan-color-theme.json"
       }
     ]
+  },
+  "homepage": "https://github.com/Hanabiraa/cyan-light-theme-fork",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hanabiraa/cyan-light-theme-fork.git"
   }
 }
