--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Fork colour theme from JetBrains Cyan Light Theme (original author https://github.com/OlyaB/CyanTheme)",
   "icon": "./resources/logo.png",
   "version": "1.1.0",
+  "publisher": "Hanabiraa",
   "engines": {
     "vscode": "^1.96.0"
   },
