--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cyan-light-theme",
-  "displayName": "Cyan Light Theme",
+  "name": "cyan-theme-fork",
+  "displayName": "Cyan Theme Fork",
   "description": "Fork colour theme from JetBrains Cyan Light Theme (original author https://github.com/OlyaB/CyanTheme)",
   "icon": "./resources/logo.png",
   "version": "1.1.0",
